# poetry_monorepo

./: README.md
project_a/: pyproject.toml
project_b/: Dockerfile  pyproject.toml
project_b/project_b/: __init__.py
