[tool.poetry]
name = "project-a"
version = "0.1.0"
description = ""
authors = ["Guillem Ballesteros <guillem@maxwellrules.com>"]
readme = "README.md"
packages = [{include = "project_a"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
